# FITSeedsSearch

./: Dockerfile  README.md  fit_seeds_cleaned.csv  fitseeds.db  main.py  memo.md  pyproject.toml  run.sh
app/: db.py  main.py  models.py
frontend/: app.py
scripts/: ingest_data.py
