[project]
name = "fitseedssearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.0",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
